--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,9 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background: linear-gradient(
+    45deg,
+    rgba(11, 3, 112, 1) 0%,
+    rgba(0, 128, 128, 1) 100%
+  );
   height: 80px;
   display: flex;
   justify-content: center;
